# client-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  README.md
src/: Animation.cpp  Animation.h  AnimationData.cpp  AnimationData.h  AnimationData.hpp  AnimationInfo.hpp  AnimationSender.cpp  AnimationSender.h  AnimationSender.hpp  CMakeLists.txt  ColorContainer.h  ColorContainer.hpp  Continuous.cpp  Continuous.h  Direction.cpp  Direction.h  EndAnimation.h  EndAnimation.hpp  Section.hpp  StripInfo.cpp  StripInfo.h  StripInfo.hpp
test/: AnimationDataTest.h  AnimationDataTest.hpp  AnimationInfoTest.hpp  AnimationTest.h  CMakeLists.txt  ColorContainerTest.h  ColorContainerTest.hpp  ContinuousTest.h  DirectionTest.h  EndAnimationTest.h  EndAnimationTest.hpp  SectionTest.hpp  StripInfoTest.h  StripInfoTest.hpp  run_tests.cpp
